# pydantic2django

./: .gitignore  .nav.yml  .pre-commit-config.yaml  404.html  PROJECT_STRUCTURE.md  README.md  README_PYDANTIC_DJANGO_METHODS.md  conftest.py  generated_models.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  refactoring_relationships.md  setup.py  test_db.sqlite3
.cursor/rules/: changenotes.mdc  git-checkin.mdc
.github/workflows/: deploy-docs.yml  publish-pypi.yml
Architecture/CONTEXT_HANDLING/: index.html
Architecture/OVERVIEW/: index.html
bugs/2025-10-01-xml-wrapper-child-fk-direction/: index.html
django_pydantic/: __init__.py  apps.py
django_pydantic/migrations/: __init__.py
docs/: .nav.yml  index.md  reference.md
docs/Architecture/: CONTEXT_HANDLING.md
docs/how_it_works/: generic_entries_contenttypes.md  xmlschema_element_and_type_handling.md
docs/how_to_use/: parametrized_assert_tests.md
docs/plans/: gfk_generic_entries_plan.md
examples/: generate_models.py  generate_models_example.py  simple_model_conversion_example.py
how_it_works/core_modules_and_concepts/: index.html
how_it_works/generic_entries_contenttypes/: index.html
how_it_works/ingestor_strict_and_contract/: index.html
how_it_works/provider_backend_pattern/: index.html
how_it_works/readme_bidirectional_mapper/: index.html
how_it_works/readme_context/: index.html
how_it_works/readme_ingestion/: index.html
how_it_works/readme_relationships/: index.html
how_it_works/timescale/: index.html
how_it_works/xmlschema_element_and_type_handling/: index.html
how_it_works/xmlschema_notes/: index.html
how_to_use/bidirectional_generation/: index.html
how_to_use/ingestor_validation/: index.html
how_to_use/integrate_into_django_app/: index.html
how_to_use/parametrized_assert_tests/: index.html
plans/gfk_generic_entries_plan/: index.html
pydantic2django/: __init__.py  core.py  fields.py  methods.py  migrations.py
reference/pydantic2django/: index.html
search/: search_index.json
src/pydantic2django/: __init__.py  admin.py  base_django_model.py  context_storage.py  core.py  discovery.py  entrypoint.py  factory.py  field_converter.py  field_type_mapping.py  field_type_resolver.py  field_utils.py  fields.py  generator.py  import_handler.py  methods.py  (+8 more)
tests/: __init__.py  apps.py  conftest.py  dummy_models.py  fixtures.py  manage.py  mock_discovery.py  settings.py  simple_model_conversion_example.py  simplified_test.py  standalone_test.py  test_app_label_duplication.py  test_basic_import.py  test_chains_discovery.py  test_chains_model_generator.py  test_context_template.py  test_core.py  test_discovery.py  test_discovery_conversion.py  test_discovery_core.py  test_discovery_dependencies.py  test_discovery_direct.py  test_discovery_packages.py  test_django_field_factory.py  test_factory.py  test_factory_discovery.py  test_field_converter.py  test_field_type_resolver.py  test_fields.py  test_fixture_definitions.py  test_fixtures.py  test_methods.py  test_migrations.py  test_relationships.py  test_relationships_advanced.py  test_static_django_model_generator.py  test_type_handler.py  test_type_hints.py  test_type_mappings.py  type_handler_fix_plan.md  (+1 more)
(+122 files in other folders)
