[tool.poetry]
name = "pydantic2django"
version = "0.1.0"
description = "Convert Pydantic models to Django models dynamically"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pydantic2django", from = "src"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0"
pydantic = ">=2.0"
pre-commit = "^4.1.0"
email-validator = "^2.1.0"
torch = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^23.0.0"
mypy = "^1.5.0"
django-stubs = "^4.2.3"
mypy-extensions = "^1.0.0"
types-setuptools = "*"
types-python-dateutil = "*"
types-requests = "*"
types-PyYAML = "*"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ['UP007', 'UP038']
line-length = 120
target-version = "py311"
exclude = [
    "tests/*",
    "test_*.py",
    "**/tests/*",
    "**/*_test.py",]

[tool.ruff.isort]
known-first-party = ["pydantic2django"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [
    ".",
    "src"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--ds=tests.settings",
    "--no-migrations"
]
